# chattysock

./: .gitignore  Makefile  pyproject.toml  requirements.txt
chat/: consumers.py  routing.py  urls.py  views.py
chat/templates/chat/: base.html  chatroom.html  index.html
core/: asgi.py  settings.py
core/templates/: base.html
users/: admin.py  models.py
users/migrations/: 0001_initial.py
