[tool.poetry]
name = "chattysock"
version = "0.1.0"
description = ""
authors = ["Natalia Teplynina <nt@mnt9.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
channels = "^3.0.5"
django-bootstrap4 = "^22.2"
gunicorn = "^20.1.0"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
